--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h2 style="color: rgb(0, 0, 0);" class="titl"></h2>
     <h2 style="color: rgb(0, 0, 0);" class="titls"></h2>
-
+<h4>ishladimi?</h4>
     <input type="text" class="search" placeholder="search">
     <button class="btn btn-success">click</button>
 
